--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -98,9 +98,57 @@ main div {
     align-items: center;
 }
 
+main .logos {
+    background: #F4F3F4;
+}
+
+main .logos h2 {
+    font-size: 4.5em;
+    margin-bottom: 10%;
+}
+
+main .logos .first {
+    font-size: 3.5em;
+    text-align: center;
+}
+
+main .logos .second {
+    font-size: 2.5em;
+}
+
+main div button {
+    display: block;
+    order: 0;
+    flex: 0 1 auto;
+    align-self: center;
+    width: 90%;
+    border-radius: 5px;
+    padding: 5%;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 2em;
+    margin: 3%;
+}
+
+main .logos .discover {
+    background-color: white;
+    color: #192592;
+}
+
+main .try {
+    margin-top: 6em;
+}
+
+main .try .start {
+    background-color: #192592;
+    color: white;
+    width: 22em;
+}
+
 main img {
-    width: 80%;
-    margin: 2em 5em;
+    width: 60%;
+    margin: 5em;
 }
   @media (min-width: 768px) and (max-width: 992px) {
     * {
