--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -182,21 +182,162 @@ footer .container-2 ul {
     margin-right: 1em;
 }
 
+footer .container-2 ul:nth-child(2) {
+    margin-left: 5em;
+}
+
 footer .container-2 li {
     margin-bottom: 1em;
     list-style-type: none;
 }
 
+footer .container-3 {
+  background: #F4F3F4;
+  padding-top: 1em;
+}
+
+footer .container-3 ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer .container-3 li {
+    margin-bottom: 1em;
+    list-style-type: none;
+    margin-right: .5em;
+}
+
+footer .final {
+  display: flex;
+  flex-direction: column;
+}
+
+footer .final .language {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2em;
+}
+
+footer .final .language * {
+  margin-right: .25em;
+}
+
+footer .final .language img {
+  width: 1.5em;
+}
+
+footer .final .social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .final .social * {
+  margin-right: 1.5em;
+}
 
   @media (min-width: 768px) and (max-width: 992px) {
-    * {
-      background-color: green;
+    /*Nav*/
+    nav {
+      width: 100%;
+    }
+
+    nav img {
+      width: 20%;
+      margin-left: 2%;
+    }
+
+    /*Header*/
+    header {
+      width: 100%;
+    }
+
+    header h1 {
+      font-size: 5em;
+      margin-bottom: 3%;
+    }
+
+    header button {
+      width: 25%;
+      padding: 2%;
+    }
+
+    header .second {
+      order: 0;
+      flex: 0 1 auto;
+      align-self: flex-start;
+      margin: 0 0 5% 2%;
+    }
+
+    header img {
+      width: 60%;
+    }
+
+    /*Main*/
+    main {
+      width: 100%;
+      padding-top: 2%;
+    }
+
+    main .first {
+      padding: 0 4% 0 4%;
+    }
+
+    main div button {
+      width: 25%;
+      padding: 2%;
+    }
+
+    main div {
+      display: flex;
+    }
+
+    main div img {
+      width: 20%;
+    }
+
+    main .try {
+      position: relative;
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    main .try .first {
+      padding: 0 4% 0 0;
+    }
+
+    main .try button {
+      position: absolute;
+      margin-bottom: 1em;
+    }
+
+    /*Footer*/
+    footer {
+      width: 100%;
+      padding-top: 2%;
+    }
+
+    footer :not(.final) {
+      display: flex;
+
+    }
+
+    footer .final {
+      display: flex;
+
     }
   }
 
   @media (min-width: 993px) and (max-width: 1200px) {
     * {
       background-color: yellow;
+      justify-content: center;
+      align-items: flex-start;
     }
   }
 
