--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -238,7 +238,7 @@ footer .final .social * {
   margin-right: 1.5em;
 }
 
-  @media (min-width: 768px) and (max-width: 992px) {
+   @media (min-width: 768px) /*and (max-width: 1200px)*/ { 
     /*Nav*/
     nav {
       width: 100%;
@@ -290,12 +290,19 @@ footer .final .social * {
       padding: 2%;
     }
 
-    main div {
+    main > div {
       display: flex;
     }
 
-    main div img {
-      width: 20%;
+    .image-cont {
+      display: flex;
+      flex-direction: row;
+      width: 80%;
+      flex-wrap: wrap;
+    }
+
+    .image-cont img {
+      width: 30%;
     }
 
     main .try {
@@ -322,27 +329,58 @@ footer .final .social * {
       padding-top: 2%;
     }
 
-    footer :not(.final) {
+    footer .container {
       display: flex;
-
+      flex-direction: row;
     }
 
-    footer .final {
-      display: flex;
-
+    footer .container img {
+      width: 14%;
+      height: 14%;
     }
+
+    footer .container-3,
+    footer .final{
+      padding: 2%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    footer .final .language {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 0px;
+    }
+
+    /* footer .container-2 ul:nth-child(2) {
+      margin-left: .1em;
+    } */
+
+    footer .container ul {
+      margin-top: 3em;
+      margin-left: 2em;
+    }    
+
+
   }
 
   @media (min-width: 993px) and (max-width: 1200px) {
-    * {
-      background-color: yellow;
+    main .image-cont {
       justify-content: center;
       align-items: flex-start;
+    }
+
+    .image-cont img {
+      width: 20%;
     }
   }
 
   @media (min-width: 1201px) {
-    * {
+    header {
       background-color: red;
+      display: flex;
+      flex-direction: row-reverse;
     }
   }
